tests/kulezi_tests/good/runtime_check.lat
int main() {
    int rep = 10;
    int x;
    while (rep > 0) {
        int x = readInt();
        printInt(rep);
        rep--;
    }
    error();
}