tests/kulezi_tests/bad/call_uninstantiated_class.lat
class c {
    int x;
}

int main() {
    printInt(c.x);
    return 0;
}